update after merge

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,7 +71,9 @@ h5rdmtoolbox =
     tests/data/PIV/vortexpair/*
     tests/data/PIV/piv_challenge1_E/*.nc
     tests/data/PIV/piv_challenge1_E/*.dat
+    tests/data/PIV/piv_challenge1_E/*.par
     h5wrapper/static/style.css
+    h5wrapper/static/*.png
     conventions/snxml/*.xml
 
 [tool:pytest]
