refactored dealing with tabels for standardized name

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,8 @@ x2hdf =
     opencv-python>=4.5.3.56
 notebooktqdm =
     ipywidgets
+cf =
+    pooch
 test =
     %(vtk)s
     %(tec)s
@@ -60,6 +62,7 @@ docs =
     sphinx-rtd-theme
     nbsphinx
 complete =
+    %(cf)s
     %(test)s
     %(docs)s
 
