--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ x2hdf =
     pco_tools>=1.0.0
     psutil>=5.9.1
     opencv-python>=4.5.3.56
+    python-dotenv>=0.20.0
 notebooktqdm =
     ipywidgets
 test =
