--- a/setup.cfg
+++ b/setup.cfg
@@ -55,8 +55,8 @@ cf =
 test =
     %(vtk)s
     %(tec)s
-    %(x2hdf)s
-    %(notebooktqdm)s
+    %(piv)s
+    %(cfd)s
     pytest
     pytest-cov
 docs =
