--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,8 @@ python_requires = !=3.8
 include_package_data = True
 install_requires =
     appdirs>=1.4.4
-    numpy>=1.23.1
+;    numba wants numpy <=1.22
+    numpy<=1.22
     h5py>=3.7.0
     matplotlib>=3.5.2
     pandas>=1.4.3
