--- a/setup.cfg
+++ b/setup.cfg
@@ -39,22 +39,25 @@ install_requires =
     ipywidgets
 
 [options.extras_require]
-vtk =
-    vtk>=8.1.2
-    pyevtk>=1.5.0
 tec =
     pytecplot>=1.4.2
-piv =
+b16 =
     pco_tools>=1.0.0
+piv =
+    %(b16)s
+    vtk>=8.1.2
+    pyevtk>=1.5.0
     netCDF4>=1.6.0
     scipy>=1.8.1
 cfd =
     python-dotenv>=0.20.0
+cf =
+    pooch
 test =
-    %(vtk)s
     %(tec)s
     %(piv)s
     %(cfd)s
+    %(cf)s
     pytest
     pytest-cov
 docs =
