--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,7 @@ complete =
 [options.entry_points]
 console_scripts =
     pivview2hdf = h5rdmtoolbox.x2hdf.piv:pivview2hdf
+    cfx2hdf = h5rdmtoolbox.x2hdf.cfd:_cfx2hdf
     h5check = h5rdmtoolbox:check
 
 [options.package_data]
