add session files to package data

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,6 +83,7 @@ h5rdmtoolbox =
     tests/data/PIV/piv_challenge1_E/*.nc
     tests/data/PIV/piv_challenge1_E/*.dat
     tests/data/PIV/piv_challenge1_E/*.par
+    x2hdf/cfd/ansys/session_files/*.pre
     h5wrapper/static/style.css
     h5wrapper/static/*.png
     conventions/snxml/*.xml
