mongo.insert allows to define specific dim scales to insert into the databe

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,14 +21,14 @@ python_requires = !=3.8
 include_package_data = True
 install_requires =
     appdirs>=1.4.4
-    numpy>=1.20
+    numpy>=1.20,<1.23.0
     h5py>=3.7.0
     matplotlib>=3.5.2
     pandas>=1.4.3
     tqdm>=4.64.0
     IPython>=8.4.0
     pytest>=7.1.2
-    pyyaml>=6.0
+    pyyaml
     xarray>=2022.3.0
     pint_xarray>=0.2.1
     tabulate>=0.8.10
