added command line interface

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ test =
 docs =
     jupyterlab
     sphinx_book_theme
+    sphinx-copybutton
     nbsphinx
 complete =
     %(test)s
@@ -75,6 +76,8 @@ console_scripts =
     pivview2hdf = h5rdmtoolbox.x2hdf.piv:pivview2hdf
     cfx2hdf = h5rdmtoolbox.x2hdf.cfd:_cfx2hdf
     h5check = h5rdmtoolbox:check
+    h5rdmtoolbox = h5rdmtoolbox:_cli
+    h5tbx = h5rdmtoolbox:_cli
 
 [options.package_data]
 h5rdmtoolbox =
