new command lie interface (structure)

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,11 +73,11 @@ complete =
 
 [options.entry_points]
 console_scripts =
-    pivview2hdf = h5rdmtoolbox.x2hdf.piv:pivview2hdf
-    cfx2hdf = h5rdmtoolbox.x2hdf.cfd:_cfx2hdf
-    h5check = h5rdmtoolbox:check
-    h5rdmtoolbox = h5rdmtoolbox:_cli
-    h5tbx = h5rdmtoolbox:_cli
+;    pivview2hdf = h5rdmtoolbox.x2hdf.piv:pivview2hdf
+;    cfx2hdf = h5rdmtoolbox.x2hdf.cfd:_cfx2hdf
+;    h5check = h5rdmtoolbox:check
+    h5tbx = h5rdmtoolbox._cli:main
+;    h5tbx = h5rdmtoolbox:_cli
 
 [options.package_data]
 h5rdmtoolbox =
