--- a/setup.cfg
+++ b/setup.cfg
@@ -64,20 +64,20 @@ test =
     pytest-cov
 docs =
     jupyterlab
+    sphinx >= 4.5.0
     sphinx_book_theme
     sphinx-copybutton
     nbsphinx
+mongodb =
+    pymongo
 complete =
+    %(mongodb)
     %(test)s
     %(docs)s
 
 [options.entry_points]
 console_scripts =
-;    pivview2hdf = h5rdmtoolbox.x2hdf.piv:pivview2hdf
-;    cfx2hdf = h5rdmtoolbox.x2hdf.cfd:_cfx2hdf
-;    h5check = h5rdmtoolbox:check
     h5tbx = h5rdmtoolbox._cli:main
-;    h5tbx = h5rdmtoolbox:_cli
 
 [options.package_data]
 h5rdmtoolbox =
