bugfixes, housekeeping, optimizations
standard name table is a standard attribute, too

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,11 +67,12 @@ docs =
     sphinx >= 4.5.0
     sphinx_book_theme
     sphinx-copybutton
+    scikit-image
     nbsphinx
 mongodb =
     pymongo
 complete =
-    %(mongodb)
+    %(mongodb)s
     %(test)s
     %(docs)s
 
