--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,17 @@
 [run]
 omit =
     h5rdmtoolbox/tests/*
+
+[report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    @atexit.register
+    except AttributeError
+    raise NotImplementedError
+    except TypeError
+    return f"{bcolors.*
+    def _attribute_repr_html
+    def _group_repr_html
+    def _html_repr_dataset
+    def h5file_html_repr
