--- a/setup.cfg
+++ b/setup.cfg
@@ -16,10 +16,7 @@ classifiers =
     "Development Status :: 4 - Beta"
 
 [options]
-packages =
-    h5rdmtoolbox.database
-    h5rdmtoolbox.wrapper
-    h5rdmtoolbox.conventions
+packages = find:
 python_requires = !=3.8
 include_package_data = True
 install_requires =
