--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ h5rdmtoolbox =
     data/*.yml
     tests/data/*
 
-[tool:pytest]
+[tool:pytest.ini_options]
+addopts = "--cov=h5rdmtoolbox"
 python_files = test_*.py
-testpaths = h5rdmtoolbox/tests
+testpaths = tests
