add tox.ini, requirements fo test and gh-actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ install_requires =
     python-dotenv>=0.20.0
     pco_tools>=1.0.0
     pooch
+    python-gitlab
 
 [options.extras_require]
 test =
