--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 *.iml
 *.pyc
 *-checkpoint.ipynb*
-*.nc
+#*.nc
+*.vtr
 *.hdf
 *.tiff
 *.par
@@ -31,7 +32,7 @@ Thumbs.db
 
 # testdata
 #testdata
-tests/data
+#tests/data
 
 # jupyter
 *.ipynb_checkpoints*
