testing update and add missing test data

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,6 @@ h5rdmtoolbox =
     tests/data/*
 
 [tool:pytest.ini_options]
-addopts = "--cov=h5rdmtoolbox"
+addopts = "--cov=h5rdmtoolbox --cov-report html"
 python_files = test_*.py
 testpaths = tests
