--- a/tests/requirements_test.txt
+++ b/tests/requirements_test.txt
@@ -45,6 +45,7 @@ Pygments==2.13.0
 pymongo==4.2.0
 pyparsing==3.0.9
 pytest==7.1.3
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.2.1
