--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.8.0
-envlist = py38
+envlist = clean, py38
 isolated_build = true
 
 [gh-actions]
@@ -13,4 +13,10 @@ setenv =
 deps =
     -r{toxinidir}/tests/requirements_test.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --cov --cov-append
+
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
