--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,9 @@
 name: Tests
 
 on:
-  - push
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -23,3 +25,21 @@ jobs:
         pip install tox tox-gh-actions
     - name: Test with tox
       run: tox
+
+    # from https://github.com/py-cov-action/python-coverage-comment-action-v3-example/blob/master/.github/workflows/ci.yml
+    - name: Coverage comment
+      id: coverage_comment
+      uses: py-cov-action/python-coverage-comment-action@v3
+      with:
+        GITHUB_TOKEN: ${{ github.token }}
+        VERBOSE: true
+
+    # from https://github.com/py-cov-action/python-coverage-comment-action-v3-example/blob/master/.github/workflows/ci.yml
+    - name: Store Push Request comment to be posted
+      uses: actions/upload-artifact@v2
+      if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
+      with:
+        # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
+        name: python-coverage-comment-action
+        # If you use a different name, update COMMENT_FILENAME accordingly
+        path: python-coverage-comment-action.txt
