--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ]
+        os: [ubuntu-latest, windows-latest, ]
         python-version: ['3.8', ]
 
     steps:
@@ -28,6 +28,7 @@ jobs:
 
     # from https://github.com/py-cov-action/python-coverage-comment-action-example/blob/master/.github/workflows/ci.yml
     - name: Coverage comment
+      runs-on: ubuntu-latest
       id: coverage_comment
       uses: py-cov-action/python-coverage-comment-action@v2
       with:
@@ -36,6 +37,7 @@ jobs:
 
     # from https://github.com/py-cov-action/python-coverage-comment-action-example/blob/master/.github/workflows/ci.yml
     - name: Store Push Request comment to be posted
+      runs-on: ubuntu-latest
       uses: actions/upload-artifact@v2
       if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
       with:
