--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,9 +37,8 @@ jobs:
 
     # from https://github.com/py-cov-action/python-coverage-comment-action-example/blob/master/.github/workflows/ci.yml
     - name: Store Push Request comment to be posted
-      if: ${{ matrix.os == 'ubuntu-latest' }}
       uses: actions/upload-artifact@v2
-      if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
+      if: ${{ matrix.os == 'ubuntu-latest' }} && steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
       with:
         # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
         name: python-coverage-comment-action
