--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 minversion = 3.8.0
-envlist = clean, py38
+;envlist = clean, py38
+envlist = py38
 isolated_build = true
 
 [gh-actions]
@@ -13,10 +14,10 @@ setenv =
 deps =
     -r{toxinidir}/tests/requirements_test.txt
 commands =
-    pytest --cov --cov-append
+    pytest --cov --cov-append --cov-config={toxinidir}/.coveragerc
 
 
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands = coverage erase
+;[testenv:clean]
+;deps = coverage
+;skip_install = true
+;commands = coverage erase
