update setup.cfg adn tox.ini

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,12 @@ h5rdmtoolbox =
     data/*.yml
     tests/data/*
 
-[tool:pytest.ini_options]
-addopts = "--cov=h5rdmtoolbox --cov-report html"
+[tool:pytest]
+addopts =
+    --cov-report term-missing --cov-branch --cov-report xml --cov-report term
+    --cov=codebase.code -vv --strict-markers -rfE
 python_files = test_*.py
 testpaths = tests
+
+[coverage:run]
+relative_files = true
