--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ setenv =
 deps =
     -r{toxinidir}/tests/requirements_test.txt
 commands =
-    pytest --cov --cov-append --cov-config={toxinidir}/.coveragerc
+    pytest
 
 
 ;[testenv:clean]
