modifier cov report call

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,10 +75,9 @@ h5rdmtoolbox =
 
 [tool:pytest]
 addopts =
-    --cov-report term-missing --cov-branch --cov-report xml --cov-report term
-    --cov=codebase.code -vv --strict-markers -rfE
+    --cov-report term-missing --cov-report html --cov-report term -vv --strict-markers -rfE
 python_files = test_*.py
 testpaths = tests
 
 [coverage:run]
-relative_files = true
+relative_files = false
