--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,8 @@ h5rdmtoolbox =
 
 [tool:pytest]
 addopts =
-    --cov-report term-missing --cov-report html --cov-report term -vv --strict-markers -rfE
+    --cov-report term-missing --cov-report xml --cov-report term -vv --strict-markers -rfE
+
 python_files = test_*.py
 testpaths = tests
 
