--- a/setup.cfg
+++ b/setup.cfg
@@ -82,3 +82,17 @@ testpaths = tests
 
 [coverage:run]
 relative_files = true
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    @atexit.register
+    except AttributeError
+    raise NotImplementedError
+    except TypeError
+    return f"{bcolors.*
+    def _attribute_repr_html
+    def _group_repr_html
+    def _html_repr_dataset
+    def h5file_html_repr
