--- a/setup.cfg
+++ b/setup.cfg
@@ -80,6 +80,10 @@ addopts =
 python_files = test_*.py
 testpaths = tests
 
+[coverage:paths]
+source =
+    tests
+
 [coverage:run]
 relative_files = true
 
