--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ setenv =
 deps =
     -r{toxinidir}/tests/requirements_test.txt
 commands =
-    pytest --cov-report term-missing --cov-report xml --cov-report term --cov=tests --cov-branch -vv --strict-markers -rfE
+    pytest
 
 
 ;[testenv:clean]
