--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,20 +24,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
     - name: Test with tox
-      run: tox
-
-    # from https://github.com/py-cov-action/python-coverage-comment-action-example/blob/master/.github/workflows/ci.yml
-    - name: Coverage comment
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      id: coverage_comment
-      uses: py-cov-action/python-coverage-comment-action@v2
-
-    # from https://github.com/py-cov-action/python-coverage-comment-action-example/blob/master/.github/workflows/ci.yml
-    - name: Store Push Request comment to be posted
-      uses: actions/upload-artifact@v2
-      if: ${{ matrix.os == 'ubuntu-latest' }} && steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
-      with:
-        # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
-        name: python-coverage-comment-action
-        # If you use a different name, update COMMENT_FILENAME accordingly
-        path: python-coverage-comment-action.txt
+      run: toxoverage-comment-action.txt
