--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,3 +1,5 @@
+# github action including pymongo see https://github.com/marketplace/actions/mongodb-in-github-actions
+
 name: Tests
 
 on:
@@ -11,17 +13,33 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, ]
-        python-version: ['3.8', ]
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
+    - name: Git checkout
     - uses: actions/checkout@v2
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.8.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+
+    - run: npm install
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
-    - name: Test with tox
-      run: toxoverage-comment-action.txt
+
+    - name: Run pytest with tox
+      run: tox
