--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 [tox]
 minversion = 3.8.0
 ;envlist = clean, py38
-envlist = py38
+envlist = py38, py39
 isolated_build = true
 
 [gh-actions]
 python =
     3.8: py38
+    3.9: py39
 
 [testenv]
 setenv =
