--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
     - name: Git checkout
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
 
     - name: Install dependencies
       run: |
