--- a/setup.cfg
+++ b/setup.cfg
@@ -11,13 +11,14 @@ classifiers =
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
     "Development Status :: 4 - Beta"
 
 [options]
 packages = find:
-python_requires = !=3.8
+python_requires = '>=3.8, <3.10'
 include_package_data = True
 install_requires =
     appdirs>=1.4.4
