--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ console_scripts =
 h5rdmtoolbox =
     data/*.yaml
     data/*.yml
+    data/style.css
     tests/data/*
 
 python_files = test_*.py
