--- a/tests/data/sntable.yml
+++ b/tests/data/sntable.yml
@@ -6,8 +6,8 @@ valid_characters: ''
 pattern: ''
 table:
     synthetic_particle_image:
-        canoncial_units: counts
+        canonical_units: counts
         description: Synthetic particle image velocimetry image containing image particles of a single synthetic recording.
     mean_particle_diameter:
-        canoncial_units: pixel
+        canonical_units: pixel
         description: The mean particle diameter of an image particle. The diameter is defined as the 2 sigma with of the gaussian intensity profile of the particle image.
