--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 0.2.0
+version = 0.3.0a1
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Research Data Management Toolbox to streamline and enhance work with HDF5
