--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.8, <3.10
+python_requires = >=3.8, <=3.9
 include_package_data = True
 install_requires =
     appdirs>=1.4.4
