--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,6 @@ setenv =
 deps =
     -r{toxinidir}/tests/requirements_test.txt
 commands =
-    pytest
+    python --version
+    pytest --version
+    python -m pytest
