--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,20 +13,18 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ['3.8', '3.9']
+        os: [ ubuntu-latest, windows-latest ]
+        python-version: [ '3.8', '3.9' , '3.10']
 
     steps:
-    - name: Git checkout
-      uses: actions/checkout@v2
-      with:
-        python-version: '3.8'
+      - name: Git checkout
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
 
-    - name: Run pytest with tox
-      run: |
-        tox
+      - name: Run pytest with tox
+        run: |
+          tox
