--- a/setup.cfg
+++ b/setup.cfg
@@ -12,13 +12,14 @@ classifiers =
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
-    "Development Status :: 4 - Beta"
+    "Development Status :: 4 - Alpha"
 
 [options]
 packages = find:
-python_requires = >=3.8, <3.10
+python_requires = >=3.8, <3.11
 include_package_data = True
 install_requires =
     appdirs>=1.4.4
