--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,11 +14,13 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
-        python-version: [ '3.8', '3.9' , '3.10']
+        python-version: ['3.8', '3.9' , '3.10']
 
     steps:
-      - name: Git checkout
-        uses: actions/checkout@v3
+      - name: Git checkout ${{ matrix.python-version }}
+        uses: actions/checkout@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
