--- a/tox.ini
+++ b/tox.ini
@@ -9,27 +9,7 @@ python =
     3.9: py39
     3.10: py310
 
-[testenv:py38]
-setenv =
-    PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/tests/requirements_test.txt
-commands =
-    python --version
-    pytest --version
-    python -m pytest
-
-[testenv:py39]
-setenv =
-    PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/tests/requirements_test.txt
-commands =
-    python --version
-    pytest --version
-    python -m pytest
-
-[testenv:py310]
+[testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
