--- a/setup.cfg
+++ b/setup.cfg
@@ -6,16 +6,15 @@ author_email = matthias.probst@kit.edu
 description = Research Data Management Toolbox to streamline and enhance work with HDF5
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/matthiasprobst/h5RDMtoolbox
+url = https://matthiasprobst.github.io/h5RDMtoolbox/
 classifiers =
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    "Operating System :: OS Independent",
-    "Development Status :: 4 - Alpha"
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Operating System :: OS Independent
+    Development Status :: 4 - Alpha
 
 [options]
 packages = find:
