--- a/.pylintrc
+++ b/.pylintrc
@@ -154,7 +154,9 @@ disable=raw-checker-failed,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
-        invalid-name
+        invalid-name,
+        logging-format-interpolation,
+        wrong-import-order
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
