--- a/tox.ini
+++ b/tox.ini
@@ -16,5 +16,5 @@ deps =
     -r{toxinidir}/tests/requirements_test.txt
 commands =
     python --version
-    pytest --version
-    python -m pytest
+;    python -m pytest
+    python -m pytest --cov --cov-report html
