--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,4 @@ setenv =
 deps =
     -r{toxinidir}/tests/requirements_test.txt
 commands =
-    python --version
-;    python -m pytest
-    python -m pytest --cov --cov-report html
+    python -m pytest
