--- a/setup.cfg
+++ b/setup.cfg
@@ -44,8 +44,8 @@ test =
     psutil>=5.9.1
 docs =
     jupyterlab
-    sphinx >= 4.5.0
-    sphinx_book_theme
+    Sphinx == 6.0.0
+    sphinx_book_theme==0.3.3
     sphinx-copybutton
     scikit-image
     scikit-learn
