--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ console_scripts =
 h5rdmtoolbox =
     data/*.yaml
     data/*.yml
-    data/H5File.hdf
+    data/File_core.hdf
     data/style.css
     tests/data/*
 
