--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,6 @@ sphinx:
   configuration: docs/conf.py
 
 python:
-  version: ["3.8", "3.9", "3.10"]
+  version: 3.8
   install:
     - requirements: requirements-docs.txt
