--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,10 +10,8 @@ build:
       - "jupyter-book config sphinx docs/"
 
 python:
-  version: 3.8
   install:
     - requirements: requirements-doc.txt
 
 sphinx:
-  builder: html
-  fail_on_warning: true
+  configuration: docs/conf.py
