fix sphinx version

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ test =
     psutil>=5.9.1
 docs =
     jupyterlab
-    Sphinx == 6.0.0
+    Sphinx>=3,<5
     sphinx_book_theme==0.3.3
     sphinx-copybutton
     scikit-image
