--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,13 @@
 [metadata]
 name = h5rdmtoolbox
-version = 0.3.0a8
+version = 0.3.0a9
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
-description = Research Data Management Toolbox to streamline and enhance work with HDF5
+description = Research Data Management Toolbox to streamline and enhance work with HDF5 respecting the FAIR principles.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://matthiasprobst.github.io/h5RDMtoolbox/
 classifiers =
-    Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -42,14 +41,6 @@ test =
     pytest>=7.1.2
     pytest-cov
     psutil>=5.9.1
-docs =
-    jupyterlab
-    Sphinx>=3,<5
-    sphinx_book_theme==0.3.3
-    sphinx-copybutton
-    scikit-image
-    scikit-learn
-    nbsphinx
 mongodb =
     pymongo
 io =
@@ -60,6 +51,21 @@ cflike =
     xmltodict
     tabulate>=0.8.10
     python-gitlab
+docs =
+    %(io)s
+    %(cflike)s
+    %(mongodb)s
+    %(test)s
+    jupyterlab
+    Sphinx>=3,<5
+    sphinx_book_theme==0.3.3
+    sphinx-copybutton
+    scikit-image
+    scikit-learn
+;    nbsphinx
+    sphinx-design
+    myst-nb
+    sphinxcontrib-bibtex
 complete =
     %(io)s
     %(cflike)s
