refactoring convention definition
default is toolbox convention ("tbx")
None will not use any standard, just expose the wrapper features
"cflike" thus was replaced by "tbx" but CF-conventions are referenced

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,14 +46,14 @@ mongodb =
 io =
     pco_tools>=1.0.0
     opencv-python>=4.5.3.56
-cflike =
+snt =
     pooch
     xmltodict
     tabulate>=0.8.10
     python-gitlab
 docs =
     %(io)s
-    %(cflike)s
+    %(snt)s
     %(mongodb)s
     %(test)s
     jupyterlab
@@ -68,7 +68,7 @@ docs =
     sphinxcontrib-bibtex
 complete =
     %(io)s
-    %(cflike)s
+    %(snt)s
     %(mongodb)s
     %(test)s
     %(docs)s
@@ -81,7 +81,8 @@ console_scripts =
 h5rdmtoolbox =
     data/*.yaml
     data/*.yml
-    data/File_core.hdf
+    data/TbxLayout.hdf
+    data/EmptyLayout.hdf
     data/style.css
     tests/data/*
 
