--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 0.3.0a10
+version = 0.4.0a1
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Research Data Management Toolbox to streamline and enhance work with HDF5 respecting the FAIR principles.
@@ -35,6 +35,7 @@ install_requires =
     pymongo>=4.2.0
     packaging
     omegaconf~=2.2.3
+    python-forge==18.6.0
 
 [options.extras_require]
 test =
