--- a/.coveragerc
+++ b/.coveragerc
@@ -11,6 +11,7 @@ exclude_lines =
     @abc.abstractmethod
     pragma: no cover
     def __repr__
+    def __hash__
     @atexit.register
     except AttributeError
     raise NotImplementedError
