--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,14 +15,22 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
         python-version: [ '3.8', '3.9' , '3.10']
+        mongodb-version: [6.0]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+
+      - name: Start MongoDB ${{ matrix.mongodb-version }}
+        uses: supercharge/mongodb-github-action@1.3.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+
       - name: Set Up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
