--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
         python-version: [ '3.8', '3.9' , '3.10']
+        mongodb-version: ['6.0']
 
     steps:
       - name: Checkout repo
