--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,15 +49,24 @@ jobs:
             AUTHSERVICEPRINCIPALNAME=""
         shell: cmd
 
-      - name: Start MongoDB
+      - name: Start MongoDB (Windows)
+        if: startsWith(matrix.os, 'windows-')
         run: |
-          if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
-            docker run --rm -d --name mongodb -p 27017:27017 mongo:6
-          elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-            "C:\mongodb\bin\mongod.exe" --dbpath "C:\mongodb\data" --bind_ip 127.0.0.1 --port 27017 --auth
-          fi
-        shell: bash
+          curl -LO "https://fastdl.mongodb.org/windows/mongodb-windows-x86_64-5.0.4-signed.msi"
+          msiexec /q /i mongodb-windows-x86_64-5.0.4-signed.msi ^
+            ADDLOCAL="all" ^
+            INSTALLLOCATION="C:\mongodb" ^
+            START=0 ^
+            REPAIR=0 ^
+            REMOVE=0 ^
+            AUTHSERVICEPRINCIPALNAME=""
+        shell: cmd
 
+      - name:Start MongoDB (Linux)
+        if: startsWith(matrix.os, 'ubuntu-')
+        uses: supercharge/mongodb-github-action@1.3.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
 
       - name: Run pytest coverage
         run: |
