--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,24 +36,11 @@ jobs:
           pip install -r requirements-dev.txt
           pip install pymongo
 
-#      - name: Install MongoDB
-#        if: startsWith(matrix.os, 'windows-')
-#        run: |
-#          curl -LO "https://fastdl.mongodb.org/windows/mongodb-windows-x86_64-5.0.4-signed.msi"
-#          msiexec /q /i mongodb-windows-x86_64-5.0.4-signed.msi ^
-#            ADDLOCAL="all" ^
-#            INSTALLLOCATION="C:\mongodb" ^
-#            START=0 ^
-#            REPAIR=0 ^
-#            REMOVE=0 ^
-#            AUTHSERVICEPRINCIPALNAME=""
-#        shell: cmd
-
-      - name: Install MongoDB
+      - name: Install MongoDB (Windows)  # see: https://github.com/ankane/setup-mongodb
         if: startsWith(matrix.os, 'windows-')
-        - uses: ankane/setup-mongodb@v1
-          with:
-            mongodb-version: ${{ matrix.mongodb-version }}
+        uses: ankane/setup-mongodb@v1
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
 
       - name: Start MongoDB (Linux)
         if: startsWith(matrix.os, 'ubuntu-')
