--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,11 +31,11 @@ jobs:
           pip install -r requirements-dev.txt
           pip install pymongo
 
-      - name: Install MongoDB (Windows)  # see: https://github.com/ankane/setup-mongodb
-        if: startsWith(matrix.os, 'windows-')
-        uses: ankane/setup-mongodb@v1
-        with:
-          mongodb-version: 5.0
+#      - name: Install MongoDB (Windows)  # see: https://github.com/ankane/setup-mongodb
+#        if: startsWith(matrix.os, 'windows-')
+#        uses: ankane/setup-mongodb@v1
+#        with:
+#          mongodb-version: 5.0
 
       - name: Start MongoDB (Linux)
         if: startsWith(matrix.os, 'ubuntu-')
