--- a/h5rdmtoolbox/data/piv-v1.yml
+++ b/h5rdmtoolbox/data/piv-v1.yml
@@ -1,7 +1,7 @@
 name: piv
 version_number: 1
 institution: ITS, KIT
-contact: matthias.probst@kit.edu
+contact: 'https://orcid.org/0000-0001-8729-0482'
 valid_characters: ''
 pattern: ''
 last_modified: 2022-09-27_20:46:26
