--- a/tests/data/sntable.yml
+++ b/tests/data/sntable.yml
@@ -1,7 +1,7 @@
 name: test
 version_number: 1
 institution: ITS
-contact: matthias.probst@kit.edu
+contact: https://orcid.org/0000-0001-8729-0482
 valid_characters: ''
 pattern: ''
 table:
