update Source class
small fixes along the way

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = matthias.probst@kit.edu
 description = Research Data Management Toolbox to streamline and enhance work with HDF5 respecting the FAIR principles.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://matthiasprobst.github.io/h5RDMtoolbox/
+url = https://h5rdmtoolbox.readthedocs.io/en/latest/
 classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
