--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Development Status :: 4 - Alpha
 
@@ -36,6 +36,8 @@ install_requires =
     packaging
     omegaconf~=2.2.3
     python-forge==18.6.0
+    requests
+
 
 [options.extras_require]
 test =
