--- a/setup.cfg
+++ b/setup.cfg
@@ -34,9 +34,10 @@ install_requires =
     regex>=2020.7.9
     pymongo>=4.2.0
     packaging
-    omegaconf~=2.2.3
     python-forge==18.6.0
     requests
+    omegaconf
+; think of getting rid of omegaconf and use standard DICT for standard names
 
 
 [options.extras_require]
