--- a/h5rdmtoolbox/data/tutorial_convention.yaml
+++ b/h5rdmtoolbox/data/tutorial_convention.yaml
@@ -56,7 +56,6 @@ comment:
   description:
     A comment to further describe the data.
 
-
 units:
   type: str
   validator:
@@ -79,12 +78,44 @@ contact:
     $orcid
   description: contact or responsible person described by an ORCID-ID
 
+standard_name:
+  validator:
+    $standard_name
+  method:
+    create_dataset:
+      optional: False
+  description:
+    'The standard name of a dataset. It must be defined in the standard name table 
+    or be a valid transformation of one of the defined names. The standard name table 
+    must be provided with the HDF5 files as a root attribute. The standard attribute units 
+    must also set.'
+  dependencies:
+    - standard_name_table
+    - units
+
+standard_name_table:
+  validator:
+    $standard_name_table
+  method:
+    __init__:
+      optional: True
+  default_value:
+    https://zenodo.org/record/8158764
+  dependencies:
+    - standard_name
+    - units
+  description:
+    The standard name table is a web resource providing the standard names, their units and descriptions.
+    To be used with the standard attributes 'standard_name' and 'units'.
 
 long_name:
   validator:
     $regex:
       ^[a-zA-Z].*(?<!\s)$
+    $minlength:
+      6
   description:
     An comprehensive description of the dataset
   method:
-    create_dataset
+    create_dataset:
+      optional: True
