--- a/h5rdmtoolbox/data/tutorial_convention.yaml
+++ b/h5rdmtoolbox/data/tutorial_convention.yaml
@@ -1,124 +1,135 @@
-__institution__: Karlsruhe Institute of Technology
+__name__: planar-piv-convention
+__institution__: https://orcid.org/members/001G000001e5aUTIAY
 __contact__: https://orcid.org/0000-0001-8729-0482
-__name__: tutorial_convention
+__use_scale_offset__: True
 
 title:
-  type: str
   validator:
     $regex:
       ^[A-Z].*(?<!\s)$
-  method:
-    __init__  # --> for File object
+  target_methods:
+    __init__
   default_value:
-    None
+    $EMPTY
   position:
-    None
+    $EMPTY
   description:
     The attribute 'title' describes the content of the file. It must start with a capital letter and must not end with a space.
+
+
+piv_method:
+  validator:
+    $in:
+      - single_pass
+      - multi_pass
+      - multi_grid
+  description: List of expected PIV algorithms.
+  target_methods:
+    __init__
+
+piv_medium:
+  validator:
+    $in:
+      - air
+      - water
+  description:
+    The medium of the flow.
+  target_methods:
+    __init__
+
+seeding_material:
+  validator:
+    $in:
+      - dehs  # 0.5-1.5 um
+      - di_ethyl_hexyl_sebacate
+      - helium_filled_soap_bubbles   # 200-3000 um
+      - glcerine_water_mixture   # 0.5-2.0 um
+      - smoke   # < 1
+      - di_otyl_phathalate   # 1-10 um
+      - glass_micro_balloons   # 30-100 um
+      - glass_micro_spheres   # 0.2-3 um
+      - tio2   # 0.1-5 um
+      - al2o3  # 0.2-5 um
+      - polystyrene  # 0.5-10 um
+  description:
+    The material of the PIV tracing particles.
+  target_methods:
+    __init__
+
+standard_name:
+  target_methods: create_dataset
+  validator: $standard_name
+  requirements: units
+  description: Standard name of the dataset. If not set, the long_name attribute must be given.
+  alternative_standard_attribute: long_name
+
+standard_name_table:
+  target_methods: __init__
+  validator:
+    $in:
+      - https://zenodo.org/record/8158764
+  default_value: https://zenodo.org/record/8158764
+  requirements:
+    - standard_name
+    - units
+  return_type: standard_name_table
+  description: The standard name table of the convention.
+
+long_name:
+  target_methods: create_dataset
+  validator:
+    $regex: ^[a-zA-Z].*(?<!\s)$
+  alternative_standard_attribute: standard_name
+  description: An comprehensive description of the dataset. If not set, the standard_name attribute must be given.
+
+long_name:
+  target_methods: create_group
+  validator:
+    $regex:
+      ^[a-zA-Z].*(?<!\s)$
+  description:
+    An comprehensive description of the dataset
+  default_value: $NONE
+
+comment:
+  target_methods:
+    - __init__
+    - create_group
+    - create_dataset
+  validator:
+    $regex: ^[A-Z].*[a-zA-Z.]$
+  default_value: $NONE
+  description: A comment to further describe the data.
+
+
+contact:
+  validator: $orcid
+  description: Contact or responsible person represented by an ORCID-ID.
+  target_methods: create_dataset, create_group
+  default_value: $NONE
 
 institution:
   validator:
     $regex:
-      '.*'
-  method:
-    __init__:
-      optional: True
-  description:
-    Name of institution mainly involved in the data
+      $orcid
+  target_methods: __init__
+  default_value: $NONE
+  description: Name of institution mainly involved in the data
 
 references:
   type:
     - str
     - List[str]
-  validator:
-    $url
-  method:
-    __init__:
-      optional: True
-    create_group:
-      optional: True
-    create_dataset:
-      optional: True
-  description:
-    Web resources servering as references for the data
+  validator: $url
+  target_methods:
+    - __init__
+    - create_group
+    - create_dataset
+  default_value: $NONE
+  description: Web resources servering as references for the data
 
-comment:
-  type: str
-  validator:
-    $regex:
-      ^[A-Z].*[a-zA-Z.]$
-  method:
-    __init__:
-      optional: True
-    create_group:
-      optional: True
-    create_dataset:
-      optional: True
-  description:
-    A comment to further describe the data.
-
-units:
-  type: str
-  validator:
-    $pintunit  # alternative: $standard_name_unit
-  method:
-    create_dataset
-  description:
-    The attribute 'units' describes the physical unit of the dataset and must be accepted by the `pint` package
-
+# positional __init__ arguments
 contact:
-  type: str
-  method:
-    __init__:
-      optional: False
-    create_group:
-      optional: True
-    create_dataset:
-      optional: True
-  validator:
-    $orcid
-  description: contact or responsible person described by an ORCID-ID
-
-standard_name:
-  validator:
-    $standard_name
-  method:
-    create_dataset:
-      optional: False
-  description:
-    The standard name of a dataset. It must be defined in the standard name table
-    or be a valid transformation of one of the defined names. The standard name table
-    must be provided with the HDF5 files as a root attribute. The standard attribute units
-    must also set.
-  dependencies:
-    - standard_name_table
-    - units
-
-standard_name_table:
-  validator:
-    $standard_name_table
-  method:
-    __init__:
-      optional: True
-  default_value:
-    https://zenodo.org/record/8158764
-  dependencies:
-    - standard_name
-    - units
-  return_type:
-    standard_name_table
-  description:
-    The standard name table is a web resource providing the standard names, their units and descriptions.
-    To be used with the standard attributes 'standard_name' and 'units'.
-
-long_name:
-  validator:
-    $regex:
-      ^[a-zA-Z].*(?<!\s)$
-    $minlength:
-      6
-  description:
-    An comprehensive description of the dataset
-  method:
-    create_dataset:
-      optional: True
+  validator: $orcid
+  description: Contact or responsible person represented by an ORCID-ID.
+  target_methods: __init__
