--- a/docs/conventions/piv_specific.yaml
+++ b/docs/conventions/piv_specific.yaml
@@ -4,31 +4,18 @@ __contact__: https://orcid.org/0000-0001-8729-0482
 __use_scale_offset__: True
 
 title:
-  type: str
   validator:
     $regex:
       ^[A-Z].*(?<!\s)$
-  method:
-    __init__  # --> for File object
+  target_methods:
+    __init__
   default_value:
-    None
+    $EMPTY
   position:
-    None
+    $EMPTY
   description:
     The attribute 'title' describes the content of the file. It must start with a capital letter and must not end with a space.
 
-contact:
-  validator:
-    $orcid
-  description:
-    Contact or responsible person represented by an ORCID-ID.
-  method:
-    create_dataset:
-      optional: True
-    create_group:
-      optional: True
-    __init__:
-      optional: False
 
 piv_method:
   validator:
@@ -37,9 +24,8 @@ piv_method:
       - multi_pass
       - multi_grid
   description: List of expected PIV algorithms.
-  method:
-    __init__:
-      optional: False
+  target_methods:
+    __init__
 
 piv_medium:
   validator:
@@ -48,15 +34,14 @@ piv_medium:
       - water
   description:
     The medium of the flow.
-  method:
-    __init__:
-      optional: False
+  target_methods:
+    __init__
 
 seeding_material:
   validator:
     $in:
       - dehs  # 0.5-1.5 um
-      - di_ethyl_hexyl_sebacate 
+      - di_ethyl_hexyl_sebacate
       - helium_filled_soap_bubbles   # 200-3000 um
       - glcerine_water_mixture   # 0.5-2.0 um
       - smoke   # < 1
@@ -68,31 +53,22 @@ seeding_material:
       - polystyrene  # 0.5-10 um
   description:
     The material of the PIV tracing particles.
-  method:
-    __init__:
-      optional: False
+  target_methods:
+    __init__
 
 standard_name:
-  validator:
-    $standard_name
-  method:
-    create_dataset:
-      optional: False
-      alt: long_name
-  requirements:
-    - units
-  description:
-    Standard names
+  target_methods: create_dataset
+  validator: $standard_name
+  requirements: units
+  description: Standard name of the dataset. If not set, the long_name attribute must be given.
+  alternative_standard_attribute: long_name
 
 standard_name_table:
+  target_methods: __init__
   validator:
     $in:
       - https://zenodo.org/record/8158764
-  method:
-    __init__:
-      optional: True
-  default_value:
-    https://zenodo.org/record/8158764
+  default_value: https://zenodo.org/record/8158764
   requirements:
     - standard_name
     - units
@@ -100,55 +76,60 @@ standard_name_table:
   description: The standard name table of the convention.
 
 long_name:
+  target_methods: create_dataset
+  validator:
+    $regex: ^[a-zA-Z].*(?<!\s)$
+  alternative_standard_attribute: standard_name
+  description: An comprehensive description of the dataset. If not set, the standard_name attribute must be given.
+
+long_name:
+  target_methods: create_group
   validator:
     $regex:
       ^[a-zA-Z].*(?<!\s)$
   description:
     An comprehensive description of the dataset
-  method:
-    create_dataset:
-      optional: False
-      alt: standard_name
-    create_group:
-      optional: True
+  default_value: $NONE
 
 comment:
-  type: str
+  target_methods:
+    - __init__
+    - create_group
+    - create_dataset
   validator:
-    $regex:
-      ^[A-Z].*[a-zA-Z.]$
-  method:
-    __init__:
-      optional: True
-    create_group:
-      optional: True
-    create_dataset:
-      optional: True
-  description:
-    A comment to further describe the data.
+    $regex: ^[A-Z].*[a-zA-Z.]$
+  default_value: $NONE
+  description: A comment to further describe the data.
 
-references:
-  type:
-    - str
-    - List[str]
-  validator:
-    $url
-  method:
-    __init__:
-      optional: True
-    create_group:
-      optional: True
-    create_dataset:
-      optional: True   
-  description:
-    Web resources servering as references for the data
+
+contact:
+  validator: $orcid
+  description: Contact or responsible person represented by an ORCID-ID.
+  target_methods: create_dataset, create_group
+  default_value: $NONE
 
 institution:
   validator:
     $regex:
       $orcid
-  method:
-    __init__:
-      optional: True
-  description:
-    Name of institution mainly involved in the data
+  target_methods: __init__
+  default_value: $NONE
+  description: Name of institution mainly involved in the data
+
+references:
+  type:
+    - str
+    - List[str]
+  validator: $url
+  target_methods:
+    - __init__
+    - create_group
+    - create_dataset
+  default_value: $NONE
+  description: Web resources servering as references for the data
+
+# positional __init__ arguments
+contact:
+  validator: $orcid
+  description: Contact or responsible person represented by an ORCID-ID.
+  target_methods: __init__
