update README and dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,10 +48,10 @@ snt =
     xmltodict
     tabulate>=0.8.10
     python-gitlab
+    pandoc>=2.3
 test =
     pytest>=7.1.2
     pytest-cov
-    psutil>=5.9.1
     %(io)s
     %(snt)s
     %(mongodb)s
