--- a/requirements.txt
+++ b/requirements.txt
@@ -3,22 +3,26 @@ numpy>=1.20,<1.23.0
 h5py>=3.7.0
 matplotlib>=3.5.2
 pandas>=1.4.3
-tqdm>=4.64.0
 IPython>=8.4.0
 pyyaml
 xarray>=2022.3.0
 pint==0.21.1
 pint_xarray>=0.2.1
 regex>=2020.7.9
-pymongo>=4.2.0
 packaging
-pytest>=7.1.2
-pytest-cov
-psutil>=5.9.1
+python-forge==18.6.0
+requests
+zenodo_search @ git+https://github.com/matthiasprobst/zenodo_search@v0.1.0a1
+# mongodb:
+pymongo>=4.2.0
+# io
 pco_tools>=1.0.0
 opencv-python>=4.5.3.56
+# snt
 pooch
 xmltodict
 tabulate>=0.8.10
 python-gitlab
-zenodo_search @ git+https://github.com/matthiasprobst/zenodo_search@v0.1.0a1
+pandoc>=2.3
+# other:
+tqdm>=4.64.0
