include pandoc in the tests.yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,12 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Install pandoc
+        if: startsWith(matrix.os, 'ubuntu-')
+        run: |
+          sudo apt-get install -y pandoc
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
