--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest ]  # [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest, windows-latest ]
         python-version: [ '3.8', '3.9' , '3.10']
         mongodb-version: ['5.0', '6.0']
 
@@ -30,11 +30,6 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu-')
         run: |
           sudo apt-get install -y pandoc
-
-      - name: Install pandocs for windows
-        if: startsWith(matrix.os, 'windows-')
-        run: |
-          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
       - name: Install choco for windows
         if: startsWith(matrix.os, 'windows-')
