--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ snt =
     xmltodict
     tabulate>=0.8.10
     python-gitlab
-    pandoc>=2.3
+    pypandoc>=1.11
 test =
     pytest>=7.1.2
     pytest-cov
