--- a/h5rdmtoolbox/data/fluid-v1.yml
+++ b/h5rdmtoolbox/data/fluid-v1.yml
@@ -5,7 +5,7 @@ contact: 'https://orcid.org/0000-0001-8729-0482'
 valid_characters: ''
 pattern: ''
 last_modified: 2022-09-27_20:46:26
-table:
+standard_names:
   time:
     canonical_units: s
     description: physical time
