--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
     Development Status :: 4 - Alpha
 
@@ -86,6 +86,7 @@ h5rdmtoolbox =
     data/EmptyLayout.hdf
     data/style.css
     tests/data/*
+    conventions/html/template.html
 
 [tool:pytest]
 python_files = test_*.py
